--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ h2 {
   column-count: 4;
   column-gap: 20px;
   margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 @media (max-width: 1200px) {
